# Omen-Weave

./: .gitignore  README.md
OW-SIEM_v0.1/: Cargo.toml
OW-SIEM_v0.1/auth-service/: pom.xml
OW-SIEM_v0.1/data-ingestion/go/: Dockerfile  go.mod  go.sum  main.go  server.go  wait-for-rust.sh
OW-SIEM_v0.1/data-ingestion/go/common/: common.go
OW-SIEM_v0.1/data-ingestion/go/entropy/: entropy.go
OW-SIEM_v0.1/data-ingestion/go/handlers/: handlers.go
OW-SIEM_v0.1/data-ingestion/go/owlscores/: owlscore.go
OW-SIEM_v0.1/data-ingestion/go/server/: server.go
OW-SIEM_v0.1/data-ingestion/go/utils/: utils.go
OW-SIEM_v0.1/data-ingestion/rust/: Cargo.toml  Dockerfile  healthcheck.sh
OW-SIEM_v0.1/data-ingestion/rust/src/: main.rs
OW-SIEM_v0.1/design/: dsgn_deployement_diagram.txt  dsgn_project_structure.txt  dsgn_sequence_diagram.txt
OW-SIEM_v0.1/docker/: docker-compose.yml  docker_install.sh
OW-SIEM_v0.1/frontend/: .babelrc  Dockerfile  package-lock.json  package.json
OW-SIEM_v0.1/frontend/public/: index.html
OW-SIEM_v0.1/frontend/src/: App.js  index.css
OW-SIEM_v0.1/frontend/src/components/: Alerts.js  Dashboard.js  DetectionSeverity.js  Login.css  Login.js  Network.js  OwlScore.js  Policies.js  RecentDetections.js  ShaDetections.js  Sidebar.css  Sidebar.js  System.js  ThreatHuntingLeads.js  ThreatIntelligence.js  Timeline.js  TopNotableSources.js  TrafficDistribution.js  connection_test.js
