[package]
name = "rust-network-traffic"
version = "1.0.0"
edition = "2021"

[dependencies]
pcap = "0.10"
tungstenite = "0.17"
url = "2.2"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.21.1"
sha2 = "0.9"
pnet = "0.27.2"

[package.metadata]
cargo-features = ["edition2021"]
